# packages/server/src/models/CommentModel.ts
@@ -1,0 +1,38 @@
+import {
+  AllowNull,
+  BelongsTo,
+  Column,
+  DataType,
+  ForeignKey,
+  Model,
+  Table,
+} from 'sequelize-typescript'
+import { UserModel } from './UserModel'
+import { TopicModel } from './TopicModel'
+
+@Table({ modelName: 'comments' })
+export class CommentModel extends Model {
+  @AllowNull(true)
+  @Column(DataType.STRING)
+  message: string
+
+  @AllowNull(true)
+  @Column({ type: DataType.INTEGER, field: 'parent_comment_id' })
+  parentCommentId: number
+
+  @AllowNull(false)
+  @ForeignKey(() => UserModel)
+  @Column({ type: DataType.INTEGER, field: 'user_id' })
+  userId: number
+
+  @AllowNull(false)
+  @ForeignKey(() => TopicModel)
+  @Column({ type: DataType.INTEGER, field: 'topic_id' })
+  topicId: number
+
+  @BelongsTo(() => UserModel, 'user_id')
+  user: UserModel
+
+  @BelongsTo(() => TopicModel, 'topic_id')
+  topic: TopicModel
+}
